# nexus-task-manager

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .coverage  .env.example  Dockerfile  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  tasks.py  users.py  websocket.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: __init__.py  base_class.py  session.py
backend/app/models/: __init__.py  task.py  user.py
backend/app/repositories/: __init__.py  task.py  user.py
backend/app/schemas/: __init__.py  auth.py  task.py  user.py
backend/app/tasks/: __init__.py  celery_app.py  export.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_repositories.py  test_security.py  test_tasks.py  test_users.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/features/auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/features/dashboard/: DashboardLayout.tsx
frontend/src/features/tasks/: TaskListPage.tsx
frontend/src/stores/: authStore.ts
infra/: docker-compose.yml
infra/nginx/: nginx.conf
